Add admin logout and change password API code.
