# dto/admin.go
@@ -1,6 +1,10 @@
 package dto
 
-import "time"
+import (
+	"github.com/gin-gonic/gin"
+	"github.com/starMoonZhao/go_gateway/public"
+	"time"
+)
 
 type AdminInfoOutput struct {
 	Id           int       `json:"id"`
@@ -9,4 +13,13 @@ type AdminInfoOutput struct {
 	Avatar       string    `json:"avatar"`
 	Introduction string    `json:"introduction"`
 	Roles        []string  `json:"roles"`
+}
+
+type AdminChangePwdInput struct {
+	Password string `json:"password" form:"password" comment:"密码" example:"123456" validate:"required"`
+}
+
+// 校验用户输入的新密码
+func (param *AdminChangePwdInput) BindValidParam(c *gin.Context) error {
+	return public.DefaultGetValidParams(c, param)
 }
